# psy-simple

./: .appveyor.yml  .buildinfo  .cruft.json  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  api.html  appveyor.yml  changelog.html  contribute.html  contributing.html  genindex.html  index.html  installation.html  installing.html  keys.tar.enc  objects.inv  plot_methods.html  psy-simple-key.enc  psy-simple-references-key.enc  py-modindex.html  pyproject.toml  readthedocs.yml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  (+1 more)
.circleci/: config.yml
.doctrees/: changelog.doctree  contribute.doctree  index.doctree  installing.doctree  plot_methods.doctree
.doctrees/api/: psy_simple.base.doctree  psy_simple.colors.doctree  psy_simple.doctree  psy_simple.plugin.doctree  psy_simple.widgets.colors.doctree  psy_simple.widgets.doctree  psy_simple.widgets.texts.doctree
.github/: issue_template.md
.reuse/: add_license.py
_modules/: index.html
_modules/psy_simple/: base.html  colors.html  plotters.html  plugin.html  widgets.html
_sources/: contribute.rst.txt  index.rst.txt  installing.rst.txt
_sources/api/: psy_simple.base.rst.txt  psy_simple.colors.rst.txt  psy_simple.plotters.rst.txt  psy_simple.plugin.rst.txt  psy_simple.rst.txt  psy_simple.widgets.colors.rst.txt  psy_simple.widgets.rst.txt  psy_simple.widgets.texts.rst.txt
_static/: documentation_options.js
api/: psy_simple.base.html  psy_simple.colors.html  psy_simple.html  psy_simple.plotters.html  psy_simple.plugin.html  psy_simple.widgets.colors.html  psy_simple.widgets.html  psy_simple.widgets.texts.html
ci/: check_ref_deploy.py  checkout_references.sh  create_references.sh  deploy.py  deploy.sh  enhance_recipe.py  get_ref_branch.py  install_python.ps1  set_create_references.sh  set_push_references.sh  setup_append.py  update_reference_submodule.py  update_reference_submodule.sh  update_submodules.py  update_submodules.sh  utils.py
ci/conda-recipe/: meta.yaml
docs/: api.rst  apigen.bash  conf.py  environment.yml  index.rst  installation.rst  installing.rst  plot_methods.rst  requirements.txt
docs/_templates/: layout.html
examples/: README.rst  example_bar.ipynb  example_line.ipynb  example_plot2d.ipynb  example_vector.ipynb  example_violin.ipynb
psy_simple/: __init__.py  _version.py  base.py  colors.py  plotters.py  plugin.py  version.py
psy_simple/widgets/: __init__.py  colors.py  texts.py
recipe/: meta.template
tests/: _base_testing.py  circumpolar_test.nc  conftest.py  get_ref_dir.py  icon_edge_test.nc  icon_test.nc  test_barplot.py  test_barplot_data.py  test_barplot_single.py  test_base.py  test_colors.py  test_combined.py  test_combined_2d.py  test_combined_icon.py  test_density.py  test_density_kde.py  test_fldmean.py  test_fldmean_icon.py  test_lineplot.py  test_lineplot_2d.py  test_lineplot_single.py  test_plot2d.py  test_plot2d_2d.py  test_plot2d_contour.py  test_plot2d_icon.py  test_plot2d_icon_contour.py  test_plot2d_icon_edge.py  test_plotters.py  test_vector.py  test_vector_icon.py  test_vector_stream.py  test_violin.py  test_violin_single.py
tests/envs/: environment_py2.7_mpl1.4.yml  environment_py2.7_mpl1.5.yml  (+17 more)
(+15 files in other folders)
